--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,26 @@
-altgraph==0.17
-appdirs==1.4.4
-asgiref==3.2.10
-autopep8==1.5.4
 certifi==2020.6.20
 chardet==3.0.4
-coverage==5.3
-cymysql==0.9.13
-distlib==0.3.1
+coreapi==2.3.3
+coreschema==0.0.4
+cymysql==0.9.15
 Django==2.2.16
-django-cymysql==2.1.0
+django-cymysql==3.1.0
 django-rest-auth==0.9.5
-djangorestframework==3.11.1
-filelock==3.0.12
-html5lib==1.1
+django-rest-swagger==2.2.0
+djangorestframework==3.12.1
 idna==2.10
-importlib-metadata==1.7.0
-isort==5.5.1
-macholib==1.14
+itypes==1.2.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 mysqlclient==2.0.1
+openapi-codec==1.3.2
 Pillow==7.2.0
-pycodestyle==2.6.0
-pyinstaller==4.0
-pyinstaller-hooks-contrib==2020.9
-PyPDF2==1.26.0
 python-decouple==3.3
 pytz==2020.1
-reportlab==3.5.52
 requests==2.24.0
+simplejson==3.17.2
 six==1.15.0
-sqlparse==0.3.1
+sqlparse==0.4.1
 stripe==2.45.0
-toml==0.10.1
-typed-ast==1.4.1
-urllib3==1.25.10
-virtualenv==20.0.31
-webencodings==0.5.1
-wrapt==1.12.1
-xhtml2pdf==0.2.4
-zipp==3.1.0
+uritemplate==3.0.1
+urllib3==1.25.11
