se pone sqlite para desarrollo e imagenes de cartas

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.pyc
 __pycache__/
 local_settings.py
-db.sqlite3
+#db.sqlite3
 db.sqlite3-journal
 media
 
@@ -429,4 +429,4 @@ pip-selfcheck.json
 docsTemp/
 #static/
 .env
-uploads/
+#uploads/
